crates/ringkernel-derive/tests/compile_fail/gpu_type_without_copy.stderr
error[E0277]: the trait bound `NotCopyable: Copy` is not satisfied
 --> tests/compile_fail/gpu_type_without_copy.rs:7:8
  |
7 | struct NotCopyable {
  |        ^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `Copy` is not implemented for `NotCopyable`
 --> tests/compile_fail/gpu_type_without_copy.rs:7:1
  |
7 | struct NotCopyable {
  | ^^^^^^^^^^^^^^^^^^
note: required by a bound in `Pod`
 --> $CARGO/bytemuck-$VERSION/src/pod.rs
  |
  | pub unsafe trait Pod: Zeroable + Copy + 'static {}
  |                                  ^^^^ required by this bound in `Pod`

error[E0277]: the trait bound `NotCopyable: Copy` is not satisfied
 --> tests/compile_fail/gpu_type_without_copy.rs:7:8
  |
7 | struct NotCopyable {
  |        ^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `Copy` is not implemented for `NotCopyable`
 --> tests/compile_fail/gpu_type_without_copy.rs:7:1
  |
7 | struct NotCopyable {
  | ^^^^^^^^^^^^^^^^^^
note: required by a bound in `assert_copy`
 --> tests/compile_fail/gpu_type_without_copy.rs:5:24
  |
5 | #[derive(Debug, Clone, GpuType)]
  |                        ^^^^^^^ required by this bound in `assert_copy`
  = note: this error originates in the derive macro `GpuType` (in Nightly builds, run with -Z macro-backtrace for more info)
